Update:判斷KYC是否逾期，給予對應文案及推薦商品。

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -1610,7 +1610,7 @@
             //#endregion
 
             //#region 更新風險屬性&判斷對應遮罩方法
-            async function handleRisk() {
+            function handleRisk() {
                 if (SC_DATA.IsLoggedIn) {
                     $('[data-save="true"]').removeClass('u-hidden');
 
@@ -2621,7 +2621,7 @@
                     let eventStringEtf = '[data-tab-panel-id="tab-1"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
 
-                    if (SC_DATA.Risk == '3') {
+                    if (SC_DATA.Risk == '3' && !SC_DATA.IsKycExpire) {
                         let eventStock = $('[data-tab-panel-id="tab-1"] .recommendedStock .swiper-wrapper');
                         let eventStringStock = '[data-tab-panel-id="tab-1"] .recommendedStock';
                         getStockData(tab, eventStock, eventStringStock, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
@@ -2717,7 +2717,7 @@
                     let eventStringEtf = '[data-tab-panel-id="tab-2"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, educationalFund, years, amountPrepared, result, expectedRoi);
 
-                    if (SC_DATA.Risk == '3') {
+                    if (SC_DATA.Risk == '3' && !SC_DATA.IsKycExpire) {
                         let eventStock = $('[data-tab-panel-id="tab-2"] .recommendedStock .swiper-wrapper');
                         let eventStringStock = '[data-tab-panel-id="tab-2"] .recommendedStock';
                         getStockData(tab, eventStock, eventStringStock, educationalFund, years, amountPrepared, result, expectedRoi);
@@ -2805,7 +2805,7 @@
                     let eventStringEtf = '[data-tab-panel-id="tab-3"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, educationalFund, years, amountPrepared, monthlyInvestment, result);
 
-                    if (SC_DATA.Risk == '3') {
+                    if (SC_DATA.Risk == '3' && !SC_DATA.IsKycExpire) {
                         let eventStock = $('[data-tab-panel-id="tab-3"] .recommendedStock .swiper-wrapper');
                         let eventStringStock = '[data-tab-panel-id="tab-3"] .recommendedStock';
                         getStockData(tab, eventStock, eventStringStock, educationalFund, years, amountPrepared, monthlyInvestment, result);
@@ -2892,7 +2892,7 @@
                     let eventStringEtf = '[data-tab-panel-id="tab-4"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, educationalFund, result, amountPrepared, monthlyInvestment, expectedRoi);
 
-                    if (SC_DATA.Risk == '3') {
+                    if (SC_DATA.Risk == '3' && !SC_DATA.IsKycExpire) {
                         let eventStock = $('[data-tab-panel-id="tab-4"] .recommendedStock .swiper-wrapper');
                         let eventStringStock = '[data-tab-panel-id="tab-4"] .recommendedStock';
                         getStockData(tab, eventStock, eventStringStock, educationalFund, result, amountPrepared, monthlyInvestment, expectedRoi);
@@ -2979,7 +2979,7 @@
                     let eventStringEtf = '[data-tab-panel-id="tab-5"] .recommendedETF';
                     getEtfData(tab, eventEtf, eventStringEtf, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
 
-                    if (SC_DATA.Risk == '3') {
+                    if (SC_DATA.Risk == '3' && !SC_DATA.IsKycExpire) {
                         let eventStock = $('[data-tab-panel-id="tab-5"] .recommendedStock .swiper-wrapper');
                         let eventStringStock = '[data-tab-panel-id="tab-5"] .recommendedStock';
                         getStockData(tab, eventStock, eventStringStock, educationalFund, years, amountPrepared, monthlyInvestment, expectedRoi);
@@ -3575,12 +3575,20 @@
                         return;
                 }
 
+                //判斷Kyc是否逾期更改對應文案
+                if (SC_DATA.PlatForm === 'WebBank' && SC_DATA.IsKycExpire) {
+                    $('.l-riskCard__desc').text('您的風險屬性已逾期，合適商品風險等級限 RR1');
+                } else if (SC_DATA.PlatForm === 'WebBank' && !SC_DATA.IsKycExpire) {
+                    $('.l-riskCard__desc').text('將依您的投資屬性，提供合適的商品。');
+                }
+
                 $('.l-riskCard__charts img').attr('src', imgSrc);
             }
             //#endregion
 
             //#region 取得基金資料
             function getFundData(tab, event, eventString, Target, Years, Prepared, Monthly, ExpectedRoi) {
+                var riskLevel;
                 var resultTab3Roi = tab3Compute(Target, Years, Prepared, Monthly);
                 var expectedRoi;
                 if (tab == 'tab1') {
@@ -3591,6 +3599,13 @@
                     expectedRoi = ExpectedRoi;
                 }
 
+                //如果逾期只回傳RR1商品
+                if (SC_DATA.IsKycExpire) {
+                    riskLevel = "'RR1'";
+                } else {
+                    riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
+                }
+
                 var token = $('input[name="__RequestVerificationToken"]').val();
 
                 $.ajax({
@@ -3599,6 +3614,7 @@
                     data: {
                         ExpectedRoi: expectedRoi,
                         ProductFundIDs: fundIds,
+                        RiskLevel: riskLevel,
                         __RequestVerificationToken: token
                     },
                     beforeSend: function (xhr) {
@@ -3635,12 +3651,16 @@
                     expectedRoi = ExpectedRoi;
                 }
 
-                if (SC_DATA.Risk == '1') {
-                    riskLevel = "'RR1','RR2'";
-                } else if (SC_DATA.Risk == '2') {
-                    riskLevel = "'RR1','RR2','RR3','RR4'";
-                } else if (SC_DATA.Risk == '3') {
-                    riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
+                if (!SC_DATA.IsKycExpire) {
+                    if (SC_DATA.Risk == '1') {
+                        riskLevel = "'RR1','RR2'";
+                    } else if (SC_DATA.Risk == '2') {
+                        riskLevel = "'RR1','RR2','RR3','RR4'";
+                    } else if (SC_DATA.Risk == '3') {
+                        riskLevel = "'RR1','RR2','RR3','RR4','RR5'";
+                    }
+                } else {
+                    riskLevel = "'RR1'";
                 }
 
                 var token = $('input[name="__RequestVerificationToken"]').val();
