update: 調整排行、搜尋頁相關ajax error導回首頁

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFund.cshtml
@@ -250,6 +250,7 @@
                     error: function (xhr, status, error) {
                         console.error(error);
                         window.loading('hide');
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
             }
