--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
@@ -308,6 +308,7 @@
                     },
                     error: function (xhr, status, error) {
                         console.error(error);
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
             }
