--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -619,6 +619,7 @@
                     }).catch((error) => {
                         console.log(error);
                         hideLoading();
+                        window.AjaxErrorRedirctToHome();
                     }).then(() => {
                         window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
                         checkKeywordQueryString();
