--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundReturn/FundReturn.cshtml
@@ -406,7 +406,7 @@
                         $('#returnDetail').html(DOMPurify.sanitize(data));
                     },
                     error: function () {
-
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
             }
