--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HighRatedFund/HighRatedFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HighRatedFund/HighRatedFund.cshtml
@@ -303,6 +303,7 @@
                     },
                     error: function (xhr, status, error) {
                         console.error(error);
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
 
