--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
@@ -510,6 +510,7 @@
                     },
                     error: function (xhr, status, error) {
                         console.error(error);
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
             }
