--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductSearch.cshtml
@@ -529,7 +529,8 @@
                 },
                 error: function (err) {
                     console.log(err);
-                    $('.c-loading').loading('hide')
+                    $('.c-loading').loading('hide');
+                    window.AjaxErrorRedirctToHome();
                 }
             });
 
