--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TftfuCttShr/TftfuCttShr.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TftfuCttShr/TftfuCttShr.cshtml
@@ -494,6 +494,7 @@
                 error: function (err) {
                     console.log(err);
                     $('.c-loading').loading('hide');
+                    window.AjaxErrorRedirctToHome();
                 }
             });
 
@@ -512,6 +513,7 @@
                 error: function (err) {
                     console.log(err);
                     $('.c-loading').loading('hide');
+                    window.AjaxErrorRedirctToHome();
                 }
             });
 
