--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -2173,7 +2173,8 @@
                 },
                 error: function (err) {
                     console.log(err);
-                    $('.c-loading').loading('hide')
+                    $('.c-loading').loading('hide');
+                    window.AjaxErrorRedirctToHome();
                 },
             });
 
