--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
@@ -215,6 +215,7 @@
 					},
                     error: function (xhr, status, error) {
                         console.error(error);
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
             }
