--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
@@ -287,6 +287,7 @@
                     },
                     error: function (xhr, status, error) {
                         console.error(error);
+                        window.AjaxErrorRedirctToHome();
                     }
                 });
             }
