--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -241,6 +241,11 @@
                 location.href = homePage;
             }
         }
+        //共用ajax error時導回首頁
+        window.AjaxErrorRedirctToHome = function () {
+                let homePage = new URL(location.protocol + "//" + location.hostname);
+                location.href = homePage;
+        }
 
         window.RiskHandler = function () {
             return new Promise((resolve, reject) => {
