--- a/src/Project/Wealth/platform/themes/css/main.css
+++ b/src/Project/Wealth/platform/themes/css/main.css
@@ -1235,6 +1235,7 @@ textarea {
   align-items: center;
   justify-self: flex-start;
   gap: 20px;
+  width: 100%;
 }
 .l-rankingCard__item {
   width: 33.3333333333%;
