--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -3336,11 +3336,19 @@
                     let p = [];
                     let mapData = [];
                     let mapData2 = [];
-                    p.push($.ajax({ url: '@FundReturnAndNetValueApiUrl', method: 'post', data: params }));
+                    p.push($.ajax({
+                        url: '@FundReturnAndNetValueApiUrl',
+                        method: 'post',
+                        data: params
+                    }));
                     //淨值不需指標指數
-                    if (obj.trend !== "netWorth"){
-                    p.push($.ajax({ url: '@FundReferenceIndexApiUrl', method: 'post', data: indexParams }));
-                     }
+                    if (obj.trend !== "netWorth") {
+                        p.push($.ajax({
+                            url: '@FundReferenceIndexApiUrl',
+                            method: 'post',
+                            data: indexParams
+                        }));
+                    }
                     Promise.all(p).then(values => {
                         $.each(values, function (index, value) {
                             let data = value;
